--- a/dynamic-forms/src/app/dynamic-form-question/dynamic-form-question.component.html
+++ b/dynamic-forms/src/app/dynamic-form-question/dynamic-form-question.component.html
@@ -10,6 +10,10 @@
       <option *ngFor="let opt of question.options" [value]="opt.key">{{opt.value}}</option>
     </select>
 
+    <mat-radio-group [id]="question.key" *ngSwitchCase="'radio'" [formControlName]="question.key">
+      <mat-radio-button *ngFor="let opt of question.options" [value]="opt.value">{{ opt.key }}</mat-radio-button>
+    </mat-radio-group>
+
   </div>
 
   <div class="errorMessage" *ngIf="!isValid">{{question.label}} is required</div>
