--- a/dynamic-forms/src/app/dynamic-form-question/dynamic-form-question.component.html
+++ b/dynamic-forms/src/app/dynamic-form-question/dynamic-form-question.component.html
@@ -3,8 +3,9 @@
 
   <div [ngSwitch]="question.controlType">
 
-    <input *ngSwitchCase="'textbox'" [formControlName]="question.key"
-            [id]="question.key" [type]="question.type">
+    <app-textbox-question *ngSwitchCase="'textbox'"
+                          [formGroup]="form"
+                          [question]="question"></app-textbox-question>
 
     <select [id]="question.key" *ngSwitchCase="'dropdown'" [formControlName]="question.key">
       <option *ngFor="let opt of question.options" [value]="opt.key">{{opt.value}}</option>
