--- a/dynamic-forms/src/app/dynamic-form-question/dynamic-form-question.component.html
+++ b/dynamic-forms/src/app/dynamic-form-question/dynamic-form-question.component.html
@@ -7,11 +7,15 @@
                           [formGroup]="form"
                           [question]="question"></app-textbox-question>
 
-    <select [id]="question.key" *ngSwitchCase="'dropdown'" [formControlName]="question.key">
+    <!-- <select [id]="question.key" *ngSwitchCase="'dropdown'" [formControlName]="question.key">
       <option *ngFor="let opt of question.options" [value]="opt.key">{{opt.value}}</option>
-    </select>
+    </select> -->
 
-    <mat-radio-group [id]="question.key" *ngSwitchCase="'radio'" [formControlName]="question.key">
+    <app-drop-down-question *ngSwitchCase="'dropdown'"
+                            [formGroup]="form"
+                            [question]="question"></app-drop-down-question>
+
+    <mat-radio-group *ngSwitchCase="'radio'" [id]="question.key" [formControlName]="question.key">
       <mat-radio-button *ngFor="let opt of question.options" [value]="opt.value">{{ opt.key }}</mat-radio-button>
     </mat-radio-group>
 
